# legacy_agent

./: README.md  pyproject.toml
agent_output/: analysis.json  report.json
agent_output/tests/python/: test_legacy_sample.py
agent_output_llm_static/: analysis.json  report.json
agent_output_llm_static/agent_context/: agent_output_llm_static__tests__python__test_agent_output__tests__python__test_legacy_sample.json  agent_output_llm_static__tests__python__test_legacy_sample.json
agent_output_llm_static/docs/: agent_output_llm_static__tests__python__test_agent_output__tests__python__test_legacy_sample.md  agent_output_llm_static__tests__python__test_legacy_sample.md
agent_output_llm_static/tests/python/: test_agent_output_llm_static__tests__python__test_agent_output__tests__python__test_legacy_sample.py  test_agent_output_llm_static__tests__python__test_legacy_sample.py  test_legacy_sample.py
agent_output_llm_static_v2/: analysis.json  report.json
examples/: legacy_sample.py
examples/agent_output/: report.json
examples/agent_output/docs/: legacy_sample.md
examples/agent_output_llm_static/: analysis.json  report.json
examples/agent_output_llm_static/agent_context/: agent_output__tests__python__test_legacy_sample.json  (+1 more)
legacy_agent/: __init__.py  __main__.py  agent_pipeline.py  cli.py  llm.py  models.py  orchestrator.py  repair.py  runner.py  scanner.py
legacy_agent/analyzers/: __init__.py  go_analyzer.py  python_analyzer.py
legacy_agent/generators/: __init__.py  docs.py  go_tests.py  python_tests.py
tests/: test_python_analyzer.py
(+3 files in other folders)
